force-app/main/default/objects/Session__c/fields/Session_Status__c.field-meta.xml
<CustomField>
    <fullName>Session_Status__c</fullName>
    <label>Session Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Abstract - Submitted</fullName>
            </value>
            <value>
                <fullName>Abstract - Copy Edited</fullName>
            </value>
            <value>
                <fullName>Abstract - Finalized</fullName>
            </value>
            <value>
                <fullName>Creative Brief - Submitted</fullName>
            </value>
            <value>
                <fullName>Draft Slides - Submitted</fullName>
            </value>
            <value>
                <fullName>Slides - Submitted</fullName>
            </value>
            <value>
                <fullName>Dry Run - Scheduled</fullName>
            </value>
            <value>
                <fullName>Dry Run - Complete</fullName>
            </value>
            <value>
                <fullName>Slides - Locked</fullName>
            </value>
            <value>
                <fullName>Session cancelled</fullName>
            </value>
            <value>
                <fullName>Creative Brief - Approved</fullName>
            </value>
            <value>
                <fullName>Ready to Publish</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>